tests/ui/required-with-default.stderr
error: Required fields cannot have default values
       note: #[builder(default)] and #[builder(required)] are incompatible
       help: remove one of incompatible attributes
 --> tests/ui/required-with-default.rs:7:5
  |
7 |     name: String,
  |     ^^^^
